[package]
name = "scx_rlfifo"
version = "0.0.2"
authors = ["Andrea Righi <andrea.righi@canonical.com>", "Canonical"]
edition = "2021"
description = "A simple FIFO scheduler in Rust that runs in user-space"
license = "GPL-2.0-only"

[dependencies]
anyhow = "1.0.65"
ctrlc = { version = "3.1", features = ["termination"] }
libbpf-rs = { git = "https://github.com/libbpf/libbpf-rs", rev = "25fa915f5b31ff0ca82c222143a373e84e10484e", version = "0.23.1" }
libc = "0.2.137"
scx_utils = { path = "../../../rust/scx_utils", version = "0.7" }
scx_rustland_core = { path = "../../../rust/scx_rustland_core", version = "0.2" }

[build-dependencies]
scx_utils = { path = "../../../rust/scx_utils", version = "0.7" }
scx_rustland_core = { path = "../../../rust/scx_rustland_core", version = "0.2" }

[features]
enable_backtrace = []
