[package]
name = "scx_rusty"
version = "1.0.1"
authors = ["Dan Schatzberg <dschatzberg@meta.com>", "Meta"]
edition = "2021"
description = "A multi-domain, BPF / user space hybrid scheduler used within sched_ext, which is a Linux kernel feature which enables implementing kernel thread schedulers in BPF and dynamically loading them. https://github.com/sched-ext/scx/tree/main"
license = "GPL-2.0-only"

[dependencies]
anyhow = "1.0.65"
clap = { version = "4.1", features = ["derive", "env", "unicode", "wrap_help"] }
ctrlc = { version = "3.1", features = ["termination"] }
fb_procfs = "0.7.0"
libbpf-rs = { git = "https://github.com/libbpf/libbpf-rs", rev = "df6089e8bea25ce94ecfd43b2b809d0d5d416bcd", version = "0.23" }
libc = "0.2.137"
log = "0.4.17"
ordered-float = "3.4.0"
scx_utils = { path = "../../../rust/scx_utils", version = "1.0.1" }
simplelog = "0.12.0"
sorted-vec = "0.8.3"
static_assertions = "1.1.0"
metrics = "0.23.0"
metrics-exporter-prometheus = "0.15.0"

[build-dependencies]
scx_utils = { path = "../../../rust/scx_utils", version = "1.0.1" }

[features]
enable_backtrace = []
